k8s/envs/local/ing-banzai-web-frontend/ing.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /example
  name: all
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|Ingress|default|example'
spec:
  ingressClassName: "nginx"
  rules:
    - host: "banzai-web.local.lco.earth"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "frontend"
                port:
                  name: "http"
